Fixed the spacing of form validation errors for a cleaner look

--- a/src/app/views/change-email-view/change-email-view.component.css
+++ b/src/app/views/change-email-view/change-email-view.component.css
@@ -114,6 +114,8 @@ input[data-autocompleted] {
 .inputAndErrorContainer p {
     font-size: 14px;
     color: lightcoral;
+    margin-top: 3px;
+    margin-bottom: 0;
 }
 
 .labelContainer {
