--- a/src/app/views/login-user/login-user.component.css
+++ b/src/app/views/login-user/login-user.component.css
@@ -100,6 +100,8 @@ input[data-autocompleted] {
 .formInputContainer p {
     font-size: 14px;
     color: lightcoral;
+    margin-top: 3px;
+    margin-bottom: 0;
 }
 
 .labelContainer {
@@ -111,11 +113,6 @@ input[data-autocompleted] {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.inputAndErrorContainer p {
-    font-size: 14px;
-    color: lightcoral;
 }
 
 .loginUserButtonContainer {
