--- a/src/app/views/register-user/register-user.component.css
+++ b/src/app/views/register-user/register-user.component.css
@@ -110,6 +110,8 @@ input[data-autocompleted] {
 .inputAndErrorContainer p {
     font-size: 14px;
     color: lightcoral;
+    margin-top: 3px;
+    margin-bottom: 0;
 }
 
 .registerUserButtonContainer {
