--- a/src/app/views/reset-password-view/reset-password-view.component.css
+++ b/src/app/views/reset-password-view/reset-password-view.component.css
@@ -114,6 +114,8 @@ input[data-autocompleted] {
 .inputAndErrorContainer p {
     font-size: 14px;
     color: lightcoral;
+    margin-bottom: 0;
+    margin-top: 3px;
 }
 
 .labelContainer {
@@ -125,6 +127,7 @@ input[data-autocompleted] {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: -5px;
 }
 
 .changePasswordButtonContainer button {
